# cpp_rabbit_tests

./: .gitignore  CMAKE_OLD.txt  CMakeLists.txt  README.md  main.cpp
celery/: main.py  ping.py  simple_worker.py
include/: thread_queue.h  thread_task.h
include/worker/: worker.h
include/worker/message/: result.h
pingpong/: pingpong.cpp
pubsub/: pub.cpp  sub.cpp
py/: main.py  ping.py
src/worker/: worker.cpp
